client/src/styles/site.scss
/* ... */
.sa-icon.sa-success.animate::after {
  -webkit-animation: rotatePlaceholder 4.25s ease-in;
  animation: rotatePlaceholder 4.25s ease-in;
}

.sa-icon.sa-success {
  border-color: transparent\9;
}
.sa-icon.sa-success .sa-line.sa-tip {
  -ms-transform: rotate(45deg) \9;
  transform: rotate(45deg) \9;
}
.sa-icon.sa-success .sa-line.sa-long {
  -ms-transform: rotate(-45deg) \9;
  transform: rotate(-45deg) \9;
}

.animateSuccessTip {
  -webkit-animation: animateSuccessTip 0.75s;
  animation: animateSuccessTip 0.75s;
}

.animateSuccessLong {
  -webkit-animation: animateSuccessLong 0.75s;
  animation: animateSuccessLong 0.75s;
}

@-webkit-keyframes animateSuccessLong {
  0% {
    width: 0;
    right: 46px;
    top: 54px;
  }
  65% {
    width: 0;
    right: 46px;
    top: 54px;
  }
  84% {
    width: 55px;
    right: 0px;
    top: 35px;
  }
  100% {
    width: 47px;
    right: 8px;
    top: 38px;
  }
}
@-webkit-keyframes animateSuccessTip {
  0% {
    width: 0;
    left: 1px;
    top: 19px;
  }
  54% {
    width: 0;
    left: 1px;
    top: 19px;
  }
  70% {
    width: 50px;
    left: -8px;
    top: 37px;
  }
  84% {
    width: 17px;
    left: 21px;
    top: 48px;
  }
  100% {
    width: 25px;
    left: 14px;
    top: 45px;
  }
}
@keyframes animateSuccessTip {
  0% {
    width: 0;
    left: 1px;
    top: 19px;
  }
  54% {
    width: 0;
    left: 1px;
    top: 19px;
  }
  70% {
    width: 50px;
    left: -8px;
    top: 37px;
  }
  84% {
    width: 17px;
    left: 21px;
    top: 48px;
  }
  100% {
    width: 25px;
    left: 14px;
    top: 45px;
  }
}

@keyframes animateSuccessLong {
  0% {
    width: 0;
    right: 46px;
    top: 54px;
  }
  65% {
    width: 0;
    right: 46px;
    top: 54px;
  }
  84% {
    width: 55px;
    right: 0px;
    top: 35px;
  }
  100% {
    width: 47px;
    right: 8px;
    top: 38px;
  }
}

.sa-icon.sa-success .sa-line {
  height: 5px;
  background-color: #4caf50;
  display: block;
  border-radius: 2px;
  position: absolute;
  z-index: 2;
}

.sa-icon.sa-success .sa-line.sa-tip {
  width: 25px;
  left: 14px;
  top: 46px;
  -webkit-transform: rotate(45deg);
  transform: rotate(45deg);
}

.sa-icon.sa-success .sa-line.sa-long {
  width: 47px;
  right: 8px;
  top: 38px;
  -webkit-transform: rotate(-45deg);
  transform: rotate(-45deg);
}

@-webkit-keyframes rotatePlaceholder {
  0% {
    transform: rotate(-45deg);
    -webkit-transform: rotate(-45deg);
  }
  5% {
    transform: rotate(-45deg);
    -webkit-transform: rotate(-45deg);
  }
  12% {
    transform: rotate(-405deg);
    -webkit-transform: rotate(-405deg);
  }
  100% {
    transform: rotate(-405deg);
    -webkit-transform: rotate(-405deg);
  }
}
@keyframes rotatePlaceholder {
  0% {
    transform: rotate(-45deg);
    -webkit-transform: rotate(-45deg);
  }
  5% {
    transform: rotate(-45deg);
    -webkit-transform: rotate(-45deg);
  }
  12% {
    transform: rotate(-405deg);
    -webkit-transform: rotate(-405deg);
  }
  100% {
    transform: rotate(-405deg);
    -webkit-transform: rotate(-405deg);
  }
}

.hptl-phase1-footer {
  box-shadow: 0 -1px 10px rgba(0, 0, 0, 0.1);
  background: #35383b;
  border-top: 1px dashed #e9e9e9;
  position: fixed;
  bottom: 0;
  left: 0;
  width: 100vw;
  padding: 5px 15px;
  z-index: 1080;
  button {
    font-size: 0.9em;
    float: right;
    margin-left: 10px;
    padding: 5px 10px;
    text-transform: uppercase;
    min-width: 70px;
  }
  .btn-other {
    background: none;
    color: lighten($color-black, 90%);
    border: 1px solid lighten($color-black, 90%);
    &:hover,
    &:focus {
      background-color: darken($primary-color, 10%);
      color: $color-white;
      border-color: lighten($primary-color, 10%);
    }
  }
  .btn:disabled {
    cursor: not-allowed !important;
    opacity: 0.4;
  }
}

.hptl-phase1-master-footer {
  .main {
    background-color: #fff !important;
    border-top: 1px solid $color-white;
    padding: 10px;
    height: 40px;
    width: 100%;
    position: fixed;
    left: 0;
    bottom: 0;
  }

  .app_bar {
    background: #000000;
  }
}
.no-padding-left-right {
  padding-left: 0;
  padding-right: 0;
}
.no-padding-left {
  padding-left: 0;
}
.no-padding-right {
  padding-left: 0;
}
.creditCardIcon {
  position: absolute;
  height: 20px;
  width: 30px;
  padding-top: 6px;
  right: 0;
}
.style_Label + h4 {
  font-size: 1.24em;
  margin-top: 3px;
  margin-bottom: 7px;
}
.style_Label + h6 {
  font-size: 1.1em;
}

label {
  margin-bottom: 0px;
  font-size: $fontSize;
  text-transform: uppercase;
  font-weight: 100;
  -moz-osx-font-smoothing: $moz-osx-font-smoothing;
  -webkit-font-smoothing: $webkit-font-smoothing;
}

input[type="text"],
input[type="number"],
input[type="tel"],
input[type="email"],
input[type="password"],
input[type="time"],
input[type="type"] {
  font-size: $textFontSize;
  padding: 4px 6px 4px;
  border: 1px solid #d3d3d3;
  border-radius: 4px;
  background: $color-white;
  width: 100%;
}

input:disabled::-webkit-input-placeholder {
  /* WebKit browsers */
  color: $color-white;
}
input:disabled:-moz-placeholder {
  /* Mozilla Firefox 4 to 18 */
  color: $color-white;
}
input:disabled::-moz-placeholder {
  /* Mozilla Firefox 19+ */
  color: $color-white;
}
input:disabled:-ms-input-placeholder {
  /* Internet Explorer 10+ */
  color: $color-white;
}

input[type="color"] {
  font-size: $textFontSize;
  -webkit-appearance: none;

  height: 29px;
  padding: 0;
  margin: 0;
  border: 1px solid #d3d3d3;
  border-radius: 4px;
  overflow: hidden;
}
input[type="color"]::-webkit-color-swatch-wrapper {
  padding: 0;
}
input[type="color"]::-webkit-color-swatch {
  border: none;
}

input.autoselect-input {
  width: 100%;
  border-radius: 5px;
  border: 1px solid #d3d3d3;

  padding: 5px 5px 4px;
}

.color-picker-icon {
  position: absolute;
  top: 24px;
  left: 16px;
  background: $color-white;
  padding: 3px 6px;
  color: #616161;
}
/* ... */

